# torrentdoer

./: README.md  ansible-playbook.yml  create_downloader.py  playbook.yml  pyproject.toml  settings.json
docs/: _config.yml
tests/: test_do_downloader.py
torrentdoer/: __init__.py  __main__.py  constants.py  create.py  destroy.py  droplet_helper.py  entrypoint.py  retrieve.py  ssh.py  sshconnect.py
