[tool.poetry]
name = "torrentdoer"
version = "0.2.0"
description = "Do your torrenting from DigitalOcean."
authors = ["Tyler Gannon <tgannon@gmail.com>"]
include = ["ansible-playbook.yml"]
readme = "README.md"
license = "BSD-4-Clause"
repository = "https://github.com/tylergannon/torrentdoer"

[tool.poetry.scripts]
torrentdoer = "torrentdoer.entrypoint:cli"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^2.10.3"
click = "^7.1.2"
click-conf-file = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter-book = "^0.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
